--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-hook/media-query": "^1.1.1",
     "@react-native-async-storage/async-storage": "^1.19.0",
     "@supabase/storage-js": "^2.5.1",
     "@supabase/supabase-js": "^2.26.0",
